@@ -60,6 +60,8 @@ PIG-989: Allow type merge between numerical type and non-numerical type (daijy)
 
 PIG-894: order-by fails when input is empty (daijy)
 
+PIG-995: Limit Optimizer throw exception "ERROR 2156: Error while fixing projections" (daijy)
+
 Release 0.5.0 - Unreleased
 
 INCOMPATIBLE CHANGES
